# msds

./: LICENSE  Makefile  README.md  pyproject.toml
csds/: __init__.py  dataset.py  features.py  plots.py
csds/modeling/: predict.py  train.py
docs/: ci.yaml  mkdocs.yml
docs/docs/: index.md
