[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "csds"
version = "0.0.1"
description = "Case Studies in Data Science"
authors = [
  { name = "Anand Divakaran" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "apache-airflow>=3.1.5",
    "arviz>=0.23.0",
    "awscli",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "mypy>=1.19.1",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pre-commit>=4.5.1",
    "pymc>=5.26.1",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["csds"]
include = ["pyproject.toml", "csds/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["csds"]
force-sort-within-sections = true

